// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`server archive /archive/2019-03/page-1.html 1`] = `
"<!DOCTYPE html>
<html>
<head>
  <meta charset=\\"UTF-8\\" />
  <title>Archive March 2019 - Koala</title>
  <meta name=\\"robots\\" content=\\"index, follow\\" />
  <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0, user-scalable=yes\\" />
  <meta http-equiv=\\"X-UA-Compatible\\" content=\\"IE=edge\\" />
  <link rel=\\"canonical\\" href=\\"https://www.koalaspace.com/prefix/archive/2019-03/page-1.html\\" />
  <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"/prefix/style.css\\" />
  <link rel=\\"apple-touch-icon\\" href=\\"/prefix/images/logo-512.png\\" />
  <link rel=\\"icon\\" sizes=\\"512x512\\" href=\\"/prefix/images/logo-512.png\\" />
  <link rel=\\"shortcut icon\\" href=\\"/prefix/favicon.ico\\" />
  <meta name=\\"description\\" content=\\"A simple static website generator\\" />
</head>

<body>
  <header>
  <div class=\\"header-logo-panel\\">
    <div class=\\"header-logo\\">
      <div class=\\"header-image\\">
        <a href=\\"/prefix/\\">
          <img src=\\"/prefix/images/logo-128.png\\" alt=\\"Koala Logo\\" />
        </a>
      </div>
      <div class=\\"header-text\\">
        <div class=\\"header-title\\">
          <a href=\\"/prefix/\\">Koala</a>
        </div>
        <div class=\\"header-subtitle\\">
          <a href=\\"/prefix/\\">Static Website Generator</a>
        </div>
      </div>
    </div>
  </div>

  <nav>
    <ul>
      <li><a href=\\"/prefix/about.html\\">About</a></li>
    </ul>
  </nav>
</header>
  <main>
  <div class=\\"pages\\">
    <h1>Archive March 2019</h1>
    <section>
      <h2>
        <a href=\\"/prefix/post5.html\\">Post 5</a>
      </h2>
      <div class=\\"post-date\\">3 March 2019</div>
      <p>
  Content 5
</p>
      <a href=\\"/prefix/post5.html\\">Read More</a>
    </section>
    <section>
      <h2>
        <a href=\\"/prefix/post4.html\\">Post 4</a>
      </h2>
      <div class=\\"post-date\\">2 March 2019</div>
      <p>
  Content 4
</p>
      <a href=\\"/prefix/post4.html\\">Read More</a>
    </section>
    <section>
      <h2>
        <a href=\\"/prefix/post3.html\\">Post 3</a>
      </h2>
      <div class=\\"post-date\\">1 March 2019</div>
      <p>
  Content 3
</p>
      <a href=\\"/prefix/post3.html\\">Read More</a>
    </section>
  </div>
  <nav class=\\"pages-navigation\\">
    <div class=\\"page-previous\\">
    </div>
    <div class=\\"page-number\\">Page 1</div>
    <div class=\\"page-next\\">
    </div>
  </nav>



</main>
  <div class=\\"navigation\\">
</div>

<aside>
  <h2>Archives</h2>
  <ul>
    <li>
      <a href=\\"/prefix/archive/2020-06/page-1.html\\">June 2020</a>
    </li>
    <li>
      <a href=\\"/prefix/archive/2019-03/page-1.html\\">March 2019</a>
    </li>
    <li>
      <a href=\\"/prefix/archive/2019-01/page-1.html\\">January 2019</a>
    </li>
  </ul>
</aside>

<aside>
  <h2>Tags</h2>
  <ul>
    <li>
      <a href=\\"/prefix/tags/hello/page-1.html\\">hello</a>
    </li>
    <li>
      <a href=\\"/prefix/tags/intro/page-1.html\\">intro</a>
    </li>
    <li>
      <a href=\\"/prefix/tags/number/page-1.html\\">number</a>
    </li>
    <li>
      <a href=\\"/prefix/tags/test/page-1.html\\">test</a>
    </li>
  </ul>
</aside>

  <footer>
  <b>Koala</b><br />
  Static Website Generator<br />
  <a href=\\"https://www.koalaspace.com/prefix/\\">https://www.koalaspace.com/prefix/</a>
</footer>
</body>

</html>"
`;

exports[`server index 1`] = `
"<!DOCTYPE html>
<html>
<head>
  <meta charset=\\"UTF-8\\" />
  <title>Koala - Static Website Generator</title>
  <meta name=\\"robots\\" content=\\"index, follow\\" />
  <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0, user-scalable=yes\\" />
  <meta http-equiv=\\"X-UA-Compatible\\" content=\\"IE=edge\\" />
  <link rel=\\"canonical\\" href=\\"https://www.koalaspace.com/prefix/\\" />
  <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"/prefix/style.css\\" />
  <link rel=\\"apple-touch-icon\\" href=\\"/prefix/images/logo-512.png\\" />
  <link rel=\\"icon\\" sizes=\\"512x512\\" href=\\"/prefix/images/logo-512.png\\" />
  <link rel=\\"shortcut icon\\" href=\\"/prefix/favicon.ico\\" />
  <meta name=\\"description\\" content=\\"A simple static website generator\\" />
</head>

<body>
  <header>
  <div class=\\"header-logo-panel\\">
    <div class=\\"header-logo\\">
      <div class=\\"header-image\\">
        <a href=\\"/prefix/\\">
          <img src=\\"/prefix/images/logo-128.png\\" alt=\\"Koala Logo\\" />
        </a>
      </div>
      <div class=\\"header-text\\">
        <div class=\\"header-title\\">
          <a href=\\"/prefix/\\">Koala</a>
        </div>
        <div class=\\"header-subtitle\\">
          <a href=\\"/prefix/\\">Static Website Generator</a>
        </div>
      </div>
    </div>
  </div>

  <nav>
    <ul>
      <li><a href=\\"/prefix/about.html\\">About</a></li>
    </ul>
  </nav>
</header>
  <main>
  <div class=\\"pages\\">
    <h1>Posts</h1>
    <section>
      <h2>
        <a href=\\"/prefix/hello-world.html\\">Hello World</a>
      </h2>
      <div class=\\"post-date\\">20 June 2020</div>
      <p>
  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris maximus orci ac tortor consequat, nec ultrices metus
  dictum. Cras non rutrum dui, ac euismod lacus. Fusce sit amet purus justo. Ut rutrum, metus porttitor pretium aliquet,
  diam dolor fermentum nibh, tempus pretium mi justo in velit. Vestibulum porttitor erat ut congue accumsan. Aenean eu
  lacus quam. Morbi consequat ante quis eros iaculis tempus. Orci varius natoque penatibus et magnis dis parturient
  montes, nascetur ridiculus mus. Nulla sit amet urna vitae elit iaculis blandit. Mauris dignissim consectetur augue vel
  varius.
</p>

      <a href=\\"/prefix/hello-world.html\\">Read More</a>
    </section>
    <section>
      <h2>
        <a href=\\"/prefix/test/test.html\\">Test</a>
      </h2>
      <div class=\\"post-date\\">10 June 2020</div>
      <p>
  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris maximus orci ac tortor consequat, nec ultrices metus
  dictum. Cras non rutrum dui, ac euismod lacus. Fusce sit amet purus justo. Ut rutrum, metus porttitor pretium aliquet,
  diam dolor fermentum nibh, tempus pretium mi justo in velit. Vestibulum porttitor erat ut congue accumsan.
</p>

      <a href=\\"/prefix/test/test.html\\">Read More</a>
    </section>
    <section>
      <h2>
        <a href=\\"/prefix/post5.html\\">Post 5</a>
      </h2>
      <div class=\\"post-date\\">3 March 2019</div>
      <p>
  Content 5
</p>
      <a href=\\"/prefix/post5.html\\">Read More</a>
    </section>
    <section>
      <h2>
        <a href=\\"/prefix/post4.html\\">Post 4</a>
      </h2>
      <div class=\\"post-date\\">2 March 2019</div>
      <p>
  Content 4
</p>
      <a href=\\"/prefix/post4.html\\">Read More</a>
    </section>
    <section>
      <h2>
        <a href=\\"/prefix/post3.html\\">Post 3</a>
      </h2>
      <div class=\\"post-date\\">1 March 2019</div>
      <p>
  Content 3
</p>
      <a href=\\"/prefix/post3.html\\">Read More</a>
    </section>
  </div>
  <nav class=\\"pages-navigation\\">
    <div class=\\"page-previous\\">
    </div>
    <div class=\\"page-number\\">Page 1</div>
    <div class=\\"page-next\\">
      <a href=\\"/prefix/posts/page-2.html\\">Next Page &#8594;</a>
    </div>
  </nav>



</main>
  <div class=\\"navigation\\">
</div>

<aside>
  <h2>Archives</h2>
  <ul>
    <li>
      <a href=\\"/prefix/archive/2020-06/page-1.html\\">June 2020</a>
    </li>
    <li>
      <a href=\\"/prefix/archive/2019-03/page-1.html\\">March 2019</a>
    </li>
    <li>
      <a href=\\"/prefix/archive/2019-01/page-1.html\\">January 2019</a>
    </li>
  </ul>
</aside>

<aside>
  <h2>Tags</h2>
  <ul>
    <li>
      <a href=\\"/prefix/tags/hello/page-1.html\\">hello</a>
    </li>
    <li>
      <a href=\\"/prefix/tags/intro/page-1.html\\">intro</a>
    </li>
    <li>
      <a href=\\"/prefix/tags/number/page-1.html\\">number</a>
    </li>
    <li>
      <a href=\\"/prefix/tags/test/page-1.html\\">test</a>
    </li>
  </ul>
</aside>

  <footer>
  <b>Koala</b><br />
  Static Website Generator<br />
  <a href=\\"https://www.koalaspace.com/prefix/\\">https://www.koalaspace.com/prefix/</a>
</footer>
</body>

</html>"
`;

exports[`server page about.html 1`] = `
"<!DOCTYPE html>
<html>
<head>
  <meta charset=\\"UTF-8\\" />
  <title>About - Koala</title>
  <meta name=\\"robots\\" content=\\"index, follow\\" />
  <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0, user-scalable=yes\\" />
  <meta http-equiv=\\"X-UA-Compatible\\" content=\\"IE=edge\\" />
  <link rel=\\"canonical\\" href=\\"https://www.koalaspace.com/prefix/about.html\\" />
  <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"/prefix/style.css\\" />
  <link rel=\\"apple-touch-icon\\" href=\\"/prefix/images/logo-512.png\\" />
  <link rel=\\"icon\\" sizes=\\"512x512\\" href=\\"/prefix/images/logo-512.png\\" />
  <link rel=\\"shortcut icon\\" href=\\"/prefix/favicon.ico\\" />
  <meta name=\\"description\\" content=\\"A simple static website generator\\" />
</head>

<body>
  <header>
  <div class=\\"header-logo-panel\\">
    <div class=\\"header-logo\\">
      <div class=\\"header-image\\">
        <a href=\\"/prefix/\\">
          <img src=\\"/prefix/images/logo-128.png\\" alt=\\"Koala Logo\\" />
        </a>
      </div>
      <div class=\\"header-text\\">
        <div class=\\"header-title\\">
          <a href=\\"/prefix/\\">Koala</a>
        </div>
        <div class=\\"header-subtitle\\">
          <a href=\\"/prefix/\\">Static Website Generator</a>
        </div>
      </div>
    </div>
  </div>

  <nav>
    <ul>
      <li><a href=\\"/prefix/about.html\\">About</a></li>
    </ul>
  </nav>
</header>
  <main>

  <section>
    <h1>
      <a href=\\"/prefix/about.html\\">About</a>
    </h1>
    <p>
  The project aims to create simple to use, scalable and fast static website generator.
</p>
<p>
  More info at <a href=\\"https://github.com/KoalaSpace/koala-webgen\\">GitHub</a>
</p>
  </section>


</main>
  <div class=\\"navigation\\">
</div>

<aside>
  <h2>Archives</h2>
  <ul>
    <li>
      <a href=\\"/prefix/archive/2020-06/page-1.html\\">June 2020</a>
    </li>
    <li>
      <a href=\\"/prefix/archive/2019-03/page-1.html\\">March 2019</a>
    </li>
    <li>
      <a href=\\"/prefix/archive/2019-01/page-1.html\\">January 2019</a>
    </li>
  </ul>
</aside>

<aside>
  <h2>Tags</h2>
  <ul>
    <li>
      <a href=\\"/prefix/tags/hello/page-1.html\\">hello</a>
    </li>
    <li>
      <a href=\\"/prefix/tags/intro/page-1.html\\">intro</a>
    </li>
    <li>
      <a href=\\"/prefix/tags/number/page-1.html\\">number</a>
    </li>
    <li>
      <a href=\\"/prefix/tags/test/page-1.html\\">test</a>
    </li>
  </ul>
</aside>

  <footer>
  <b>Koala</b><br />
  Static Website Generator<br />
  <a href=\\"https://www.koalaspace.com/prefix/\\">https://www.koalaspace.com/prefix/</a>
</footer>
</body>

</html>"
`;

exports[`server post test/test.html 1`] = `
"<!DOCTYPE html>
<html>
<head>
  <meta charset=\\"UTF-8\\" />
  <title>Test - Koala</title>
  <meta name=\\"robots\\" content=\\"index, follow\\" />
  <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0, user-scalable=yes\\" />
  <meta http-equiv=\\"X-UA-Compatible\\" content=\\"IE=edge\\" />
  <link rel=\\"canonical\\" href=\\"https://www.koalaspace.com/prefix/test/test.html\\" />
  <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"/prefix/style.css\\" />
  <link rel=\\"apple-touch-icon\\" href=\\"/prefix/images/logo-512.png\\" />
  <link rel=\\"icon\\" sizes=\\"512x512\\" href=\\"/prefix/images/logo-512.png\\" />
  <link rel=\\"shortcut icon\\" href=\\"/prefix/favicon.ico\\" />
  <meta name=\\"description\\" content=\\"A simple static website generator\\" />
</head>

<body>
  <header>
  <div class=\\"header-logo-panel\\">
    <div class=\\"header-logo\\">
      <div class=\\"header-image\\">
        <a href=\\"/prefix/\\">
          <img src=\\"/prefix/images/logo-128.png\\" alt=\\"Koala Logo\\" />
        </a>
      </div>
      <div class=\\"header-text\\">
        <div class=\\"header-title\\">
          <a href=\\"/prefix/\\">Koala</a>
        </div>
        <div class=\\"header-subtitle\\">
          <a href=\\"/prefix/\\">Static Website Generator</a>
        </div>
      </div>
    </div>
  </div>

  <nav>
    <ul>
      <li><a href=\\"/prefix/about.html\\">About</a></li>
    </ul>
  </nav>
</header>
  <main>


  <section>
    <h1>
      <a href=\\"/prefix/test/test.html\\">Test</a>
    </h1>
    <div class=\\"post-date\\">10 June 2020</div>
    <div class=\\"post-tags\\">
      <div class=\\"post-tags-name\\">Tags: </div>
      <ul>
        <li>
          <a href=\\"/prefix/tags/test/page-1.html\\">test</a>
        </li>
      </ul>
    </div>
    <p>
  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris maximus orci ac tortor consequat, nec ultrices metus
  dictum. Cras non rutrum dui, ac euismod lacus. Fusce sit amet purus justo. Ut rutrum, metus porttitor pretium aliquet,
  diam dolor fermentum nibh, tempus pretium mi justo in velit. Vestibulum porttitor erat ut congue accumsan.
</p>
<p>
  Aenean facilisis sit amet neque a ultricies. Sed consectetur lorem quis lobortis tincidunt. Interdum et malesuada
  fames ac ante ipsum primis in faucibus. Nullam at elit pulvinar, porta lorem sed, facilisis orci. Proin lacinia nisl
  at placerat ornare. Donec ultrices dui ac varius luctus. Mauris sagittis ornare arcu, a dictum ante aliquet id.
</p>
  </section>

</main>
  <div class=\\"navigation\\">
</div>

<aside>
  <h2>Archives</h2>
  <ul>
    <li>
      <a href=\\"/prefix/archive/2020-06/page-1.html\\">June 2020</a>
    </li>
    <li>
      <a href=\\"/prefix/archive/2019-03/page-1.html\\">March 2019</a>
    </li>
    <li>
      <a href=\\"/prefix/archive/2019-01/page-1.html\\">January 2019</a>
    </li>
  </ul>
</aside>

<aside>
  <h2>Tags</h2>
  <ul>
    <li>
      <a href=\\"/prefix/tags/hello/page-1.html\\">hello</a>
    </li>
    <li>
      <a href=\\"/prefix/tags/intro/page-1.html\\">intro</a>
    </li>
    <li>
      <a href=\\"/prefix/tags/number/page-1.html\\">number</a>
    </li>
    <li>
      <a href=\\"/prefix/tags/test/page-1.html\\">test</a>
    </li>
  </ul>
</aside>

  <footer>
  <b>Koala</b><br />
  Static Website Generator<br />
  <a href=\\"https://www.koalaspace.com/prefix/\\">https://www.koalaspace.com/prefix/</a>
</footer>
</body>

</html>"
`;

exports[`server posts page-2.html 1`] = `
"<!DOCTYPE html>
<html>
<head>
  <meta charset=\\"UTF-8\\" />
  <title>Posts - Page 2 - Koala</title>
  <meta name=\\"robots\\" content=\\"index, follow\\" />
  <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0, user-scalable=yes\\" />
  <meta http-equiv=\\"X-UA-Compatible\\" content=\\"IE=edge\\" />
  <link rel=\\"canonical\\" href=\\"https://www.koalaspace.com/prefix/posts/page-2.html\\" />
  <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"/prefix/style.css\\" />
  <link rel=\\"apple-touch-icon\\" href=\\"/prefix/images/logo-512.png\\" />
  <link rel=\\"icon\\" sizes=\\"512x512\\" href=\\"/prefix/images/logo-512.png\\" />
  <link rel=\\"shortcut icon\\" href=\\"/prefix/favicon.ico\\" />
  <meta name=\\"description\\" content=\\"A simple static website generator\\" />
</head>

<body>
  <header>
  <div class=\\"header-logo-panel\\">
    <div class=\\"header-logo\\">
      <div class=\\"header-image\\">
        <a href=\\"/prefix/\\">
          <img src=\\"/prefix/images/logo-128.png\\" alt=\\"Koala Logo\\" />
        </a>
      </div>
      <div class=\\"header-text\\">
        <div class=\\"header-title\\">
          <a href=\\"/prefix/\\">Koala</a>
        </div>
        <div class=\\"header-subtitle\\">
          <a href=\\"/prefix/\\">Static Website Generator</a>
        </div>
      </div>
    </div>
  </div>

  <nav>
    <ul>
      <li><a href=\\"/prefix/about.html\\">About</a></li>
    </ul>
  </nav>
</header>
  <main>
  <div class=\\"pages\\">
    <h1>Posts</h1>
    <section>
      <h2>
        <a href=\\"/prefix/post2.html\\">Post 2</a>
      </h2>
      <div class=\\"post-date\\">2 January 2019</div>
      <p>
  Content 2
</p>
      <a href=\\"/prefix/post2.html\\">Read More</a>
    </section>
    <section>
      <h2>
        <a href=\\"/prefix/post1.html\\">Post 1</a>
      </h2>
      <div class=\\"post-date\\">1 January 2019</div>
      <p>
  Content 1
</p>
      <a href=\\"/prefix/post1.html\\">Read More</a>
    </section>
  </div>
  <nav class=\\"pages-navigation\\">
    <div class=\\"page-previous\\">
      <a href=\\"/prefix/\\">&#8592; Previous Page</a>
    </div>
    <div class=\\"page-number\\">Page 2</div>
    <div class=\\"page-next\\">
    </div>
  </nav>



</main>
  <div class=\\"navigation\\">
</div>

<aside>
  <h2>Archives</h2>
  <ul>
    <li>
      <a href=\\"/prefix/archive/2020-06/page-1.html\\">June 2020</a>
    </li>
    <li>
      <a href=\\"/prefix/archive/2019-03/page-1.html\\">March 2019</a>
    </li>
    <li>
      <a href=\\"/prefix/archive/2019-01/page-1.html\\">January 2019</a>
    </li>
  </ul>
</aside>

<aside>
  <h2>Tags</h2>
  <ul>
    <li>
      <a href=\\"/prefix/tags/hello/page-1.html\\">hello</a>
    </li>
    <li>
      <a href=\\"/prefix/tags/intro/page-1.html\\">intro</a>
    </li>
    <li>
      <a href=\\"/prefix/tags/number/page-1.html\\">number</a>
    </li>
    <li>
      <a href=\\"/prefix/tags/test/page-1.html\\">test</a>
    </li>
  </ul>
</aside>

  <footer>
  <b>Koala</b><br />
  Static Website Generator<br />
  <a href=\\"https://www.koalaspace.com/prefix/\\">https://www.koalaspace.com/prefix/</a>
</footer>
</body>

</html>"
`;

exports[`server tags tags/hello/page-1.html 1`] = `
"<!DOCTYPE html>
<html>
<head>
  <meta charset=\\"UTF-8\\" />
  <title>Tag hello - Koala</title>
  <meta name=\\"robots\\" content=\\"index, follow\\" />
  <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0, user-scalable=yes\\" />
  <meta http-equiv=\\"X-UA-Compatible\\" content=\\"IE=edge\\" />
  <link rel=\\"canonical\\" href=\\"https://www.koalaspace.com/prefix/tags/hello/page-1.html\\" />
  <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"/prefix/style.css\\" />
  <link rel=\\"apple-touch-icon\\" href=\\"/prefix/images/logo-512.png\\" />
  <link rel=\\"icon\\" sizes=\\"512x512\\" href=\\"/prefix/images/logo-512.png\\" />
  <link rel=\\"shortcut icon\\" href=\\"/prefix/favicon.ico\\" />
  <meta name=\\"description\\" content=\\"A simple static website generator\\" />
</head>

<body>
  <header>
  <div class=\\"header-logo-panel\\">
    <div class=\\"header-logo\\">
      <div class=\\"header-image\\">
        <a href=\\"/prefix/\\">
          <img src=\\"/prefix/images/logo-128.png\\" alt=\\"Koala Logo\\" />
        </a>
      </div>
      <div class=\\"header-text\\">
        <div class=\\"header-title\\">
          <a href=\\"/prefix/\\">Koala</a>
        </div>
        <div class=\\"header-subtitle\\">
          <a href=\\"/prefix/\\">Static Website Generator</a>
        </div>
      </div>
    </div>
  </div>

  <nav>
    <ul>
      <li><a href=\\"/prefix/about.html\\">About</a></li>
    </ul>
  </nav>
</header>
  <main>
  <div class=\\"pages\\">
    <h1>Tag hello</h1>
    <section>
      <h2>
        <a href=\\"/prefix/hello-world.html\\">Hello World</a>
      </h2>
      <div class=\\"post-date\\">20 June 2020</div>
      <p>
  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris maximus orci ac tortor consequat, nec ultrices metus
  dictum. Cras non rutrum dui, ac euismod lacus. Fusce sit amet purus justo. Ut rutrum, metus porttitor pretium aliquet,
  diam dolor fermentum nibh, tempus pretium mi justo in velit. Vestibulum porttitor erat ut congue accumsan. Aenean eu
  lacus quam. Morbi consequat ante quis eros iaculis tempus. Orci varius natoque penatibus et magnis dis parturient
  montes, nascetur ridiculus mus. Nulla sit amet urna vitae elit iaculis blandit. Mauris dignissim consectetur augue vel
  varius.
</p>

      <a href=\\"/prefix/hello-world.html\\">Read More</a>
    </section>
  </div>
  <nav class=\\"pages-navigation\\">
    <div class=\\"page-previous\\">
    </div>
    <div class=\\"page-number\\">Page 1</div>
    <div class=\\"page-next\\">
    </div>
  </nav>



</main>
  <div class=\\"navigation\\">
</div>

<aside>
  <h2>Archives</h2>
  <ul>
    <li>
      <a href=\\"/prefix/archive/2020-06/page-1.html\\">June 2020</a>
    </li>
    <li>
      <a href=\\"/prefix/archive/2019-03/page-1.html\\">March 2019</a>
    </li>
    <li>
      <a href=\\"/prefix/archive/2019-01/page-1.html\\">January 2019</a>
    </li>
  </ul>
</aside>

<aside>
  <h2>Tags</h2>
  <ul>
    <li>
      <a href=\\"/prefix/tags/hello/page-1.html\\">hello</a>
    </li>
    <li>
      <a href=\\"/prefix/tags/intro/page-1.html\\">intro</a>
    </li>
    <li>
      <a href=\\"/prefix/tags/number/page-1.html\\">number</a>
    </li>
    <li>
      <a href=\\"/prefix/tags/test/page-1.html\\">test</a>
    </li>
  </ul>
</aside>

  <footer>
  <b>Koala</b><br />
  Static Website Generator<br />
  <a href=\\"https://www.koalaspace.com/prefix/\\">https://www.koalaspace.com/prefix/</a>
</footer>
</body>

</html>"
`;
